--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,14 @@ name = "json_flag_reader"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+name = "json_flag_reader"
+path = "src/lib.rs"
+
 [dependencies]
 text-colorizer = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
 
 
